set a max size on h2 to prevent overflow on the main

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -104,6 +104,7 @@ h2 {
     font-weight: bold;
     padding:var(--padding-large);
     color:var(--color-main);
+    max- width:80%;
 }
 
 h3,h5 {
